src/objects/Prod_EnvironmentClient_Handover_Docs__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>CSM - ACN - S-0001 - Account Master Detail</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prod Environment/Client Handover Docs</relationshipLabel>
        <relationshipName>ProductionClientEnvironment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>CSM - ACN - Comment</description>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>CSM - ACN - S-0001 - Link</description>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <description>CSM - ACN - S-0001 - Login</description>
        <label>Login</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>CSM - ANC - S0001 - Name</description>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>CSM - ACN - S-0001 - Password</description>
        <label>Password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Prod Environment/Client Handover Docs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Link__c</columns>
        <columns>Login__c</columns>
        <columns>Password__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Production Environment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prod Environment/Client Handover Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>